--- a/BowlingGameScoreCalculator/BowlingGameScoreCalculator.csproj
+++ b/BowlingGameScoreCalculator/BowlingGameScoreCalculator.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FrameValidation_Tests.cs" />
-    <Compile Include="Tests\StringValidation_Tests.cs" />
+    <Compile Include="Tests\ConsoleInputValidator_Tests.cs" />
     <Compile Include="Tests\TenPinScoreCalculator_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
