--- a/BowlingGameScoreCalculator/BowlingGameScoreCalculator.csproj
+++ b/BowlingGameScoreCalculator/BowlingGameScoreCalculator.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Code\ConsoleInputConverter.cs" />
     <Compile Include="Code\ScoreCalculator.cs" />
     <Compile Include="Code\ConsoleInputValidator.cs" />
+    <Compile Include="CustomExceptions\InvalidInputException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\ConsoleInputValidator_Tests.cs" />
@@ -68,9 +69,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Exceptions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
